--- a/outputImprenta.css
+++ b/outputImprenta.css
@@ -5,8 +5,8 @@
             src: url('./fonts/imprenta/Acids.otf');
             font-family: Acids;}
 @font-face {
-            src: url('./fonts/imprenta/Averus (DEMO).otf');
-            font-family: Averus (DEMO);}
+            src: url('./fonts/imprenta/Averus.otf');
+            font-family: Averus;}
 @font-face {
             src: url('./fonts/imprenta/Avigea.ttf');
             font-family: Avigea;}
